--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html>
-
-  {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    {% include footer.html %}
-
-  </body>
-
+<!doctype html>
+<html lang="en">
+{% include head.html %}
+<body>
+{% include header.html %}
+<main class="main" role="main">
+    {{ content }}
+</main>
+{% include footer.html %}
+<script src="/js/boot.js"></script>
+</body>
 </html>
