--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="site-info" role="contentinfo">
-    <p>&copy; 2010&ndash;{{ site.time | date: '%Y' }} David Goss | <a href="/feed.xml">Subscribe</a></p>
+    <p>&copy; 2010&ndash;{{ site.time | date: '%Y' }} David Goss | <a href="/feed.xml">Subscribe</a> | <a href="https://github.com/davidjgoss/davidjgoss.github.io">Source</a></p>
 </footer>
