--- a/_sass/blogging/_code.scss
+++ b/_sass/blogging/_code.scss
@@ -2,7 +2,7 @@ pre, code, kbd {
 	background-color: #f5f2f0;
 	color: #000;
 	font-size: 1em;
-	font-family: monospace;
+	font-family: "Consolas", "Monaco", "Courier New", "Courier", monospace;
 	word-spacing: normal;
 	word-break: normal;
 	-moz-tab-size: 4;
