--- a/_sass/global/_vars.scss
+++ b/_sass/global/_vars.scss
@@ -1,5 +1,5 @@
-$base-font: "gaspar-wf", "Georgia", serif;
-$heading-font: "antonio-wf", "Helvetica", sans-serif;
+$base-font: "overpass-wf", "Helvetica", sans-serif;
+$heading-font: $base-font;
 
 $base-color: #333;
 $quote-color: #666;
