--- a/_sass/_landmarks.scss
+++ b/_sass/_landmarks.scss
@@ -10,9 +10,11 @@
 	text-transform: uppercase;
 	text-decoration: none;
 	font-family: $heading-font;
+	font-weight: bold;
 	font-size: 1.5em;
+	line-height: 1em;
 	padding: 0.5em;
-    padding-top: 2em;
+    padding-top: 2.5rem;
 	border: 1px solid $link-color;
 }
 
@@ -22,8 +24,8 @@
 	list-style: none;
 	text-transform: uppercase;
 	font-family: $heading-font;
-	font-size: 1.25em;
-	padding-top: 0.5em;
+	font-weight: bold;
+	padding-top: 0.5rem;
 
 	li {
 		display: inline-block;
@@ -31,7 +33,7 @@
 		&:after {
 			content: "|";
 			color: $link-color;
-			padding-left: .25em;
+			padding-left: 0.25em;
 		}
 
 		&:last-child:after {
@@ -51,7 +53,7 @@
 	@media all and (min-width:600px) {
 		clear: none;
 		float: left;
-		padding: 2.5em 0 0 0.75em;
+		padding: 2.5rem 0 0 0.75rem;
 	}
 }
 
