--- a/_includes/listing-links.html
+++ b/_includes/listing-links.html
@@ -6,7 +6,7 @@
         <a class="u-url byline__permalink" href="{{ post.url }}" itemprop="url">∞</a>
         <time class="dt-published byline__date" datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">{{ post.date | date_to_long_string }}</time>
         <span class="byine__split">from</span>
-        <span class="byline__source">{{ post.meta.linked_url | remove:'https://' | remove:'http://' | split:'/' | first }}</span>
+        <span class="byline__source">{{ post.meta.linked_url | remove:'https://' | remove:'http://' | split:'/' | first | remove:'www.' }}</span>
     </p>
     <div class="p-summary entry__excerpt" itemprop="description">{{ post.content }}</div>
 </article>
