--- a/_layouts/post-links.html
+++ b/_layouts/post-links.html
@@ -11,11 +11,11 @@ layout: default
             <a class="u-url byline__permalink" href="<?php the_permalink(); ?>" itemprop="url">∞</a>
             <time class="dt-published byline__date" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date_to_long_string }}</time>
             <span class="byline__split">from</span>
-            <span class="byline__source">{{ page.meta.linked_url | remove:'https://' | remove:'http://' | split:'/' | first }}</span>
+            <span class="byline__source">{{ page.meta.linked_url | remove:'https://' | remove:'http://' | split:'/' | first | remove:'www.' }}</span>
         </p>
     </footer>
 
     <div class="e-content entry__content" itemprop="articleBody">{{ content }}</div>
 
-    <p class="entry__go"><a class="button button--go" href="{{ page.meta.linked_url }}">View on <strong>{{ page.meta.linked_url | remove:'https://' | remove:'http://' | split:'/' | first }}</strong></a></p>
+    <p class="entry__go"><a class="button button--go" href="{{ page.meta.linked_url }}">View on <strong>{{ page.meta.linked_url | remove:'https://' | remove:'http://' | split:'/' | first | remove:'www.' }}</strong></a></p>
 </article>
