--- a/_sass/blogging/_footnotes.scss
+++ b/_sass/blogging/_footnotes.scss
@@ -1,14 +1,19 @@
-a[rev="footnote"] {
+.footnotes {
+    padding-top: 1.5rem;
+    border-top: 1px solid #ddd;
+}
+
+.reversefootnote {
     text-decoration: none;
 }
 
-a[rel="footnote"] {
-    @extend a[rev="footnote"];
+.footnote {
+    @extend .reversefootnote;
     display: inline-block;
     vertical-align: top;
     font-size: 0.666em;
-    width: 1.5em;
-    height: 1.5em;
+    width: 1.25em;
+    height: 1.25em;
     margin-left: 0.125em;
     background-color: $link-color;
     color: #fff;
