serve overpass from google fonts instead of locally

--- a/_sass/global/_vars.scss
+++ b/_sass/global/_vars.scss
@@ -1,4 +1,4 @@
-$base-font: "overpass-wf", "Helvetica", sans-serif;
+$base-font: "Overpass", "Helvetica", sans-serif;
 $heading-font: $base-font;
 
 $base-color: #333;
