--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Overpass:400,400i,700,700i" />
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Overpass+Mono|Overpass:400,400i,700,700i" />
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="icon" href="icon.png" />
   <link rel="apple-touch-icon" href="icon.png" />
