--- a/_sass/blogging/_code.scss
+++ b/_sass/blogging/_code.scss
@@ -1,6 +1,6 @@
 pre, code, kbd {
 	font-size: 1em;
-	font-family: "Consolas", "Monaco", "Courier New", "Courier", monospace;
+	font-family: $mono-font;
 	word-spacing: normal;
 	word-break: normal;
 	-moz-tab-size: 4;
