rework home page
make it more conversational and actually mention (and link to) the latest post

talk about articles rather than a blog

--- a/_sass/_landmarks.scss
+++ b/_sass/_landmarks.scss
@@ -77,7 +77,21 @@
 
 .site-intro {
 	clear: left;
-	font-size: 2rem;
-	line-height: 1.25em;
-	padding-top: 1.5rem;
+	padding-top: 2rem;
+
+	p {
+		&:first-child {
+			font-size: 3rem;
+			line-height: 1em;
+		}
+
+		&:nth-child(2) {
+			font-size: 1.5rem;
+			line-height: 1.25em;
+		}
+
+		& + p {
+			margin-top: 1.5rem;
+		}
+	}
 }
