--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <a class="site-logo" href="/">David Goss</a>
     <nav role="navigation">
         <ul class="site-nav">
-            <li><a href="/blog/">Blog</a></li>
+            <li><a href="/blog/">Articles</a></li>
             <li><a href="/about/">About</a></li>
             <li><a href="/contact/">Contact</a></li>
         </ul>
