--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,9 +7,9 @@
     <section class="site-intro">
         <p>I'm <strong>David</strong>, a software developer from the UK.</p>
 
-        <p>Most recently, I wrote about {% for post in site.categories.blog limit:1 %}<a href="{{ post.url }}">{{ post.latest }}</a>{% endfor %}. There are <a href="/blog">other articles</a> too.</p>
+        <p>Most recently, I wrote about {% for post in site.categories.blog limit:1 %}<a href="{{ post.url }}">{{ post.latest }}</a>{% endfor %}. There are <a href="/blog/">other articles</a> too.</p>
 
-        <p>There's a bit about me <a href="/about.html">here</a> and some contact info <a href="/contact.html">here</a>. You can also find me on <a href="https://twitter.com/davidjgoss">Twitter</a> and <a href="https://github.com/davidjgoss">GitHub</a>.</p>
+        <p>There's a bit about me <a href="/about/">here</a> and some contact info <a href="/contact/">here</a>. You can also find me on <a href="https://twitter.com/davidjgoss">Twitter</a> and <a href="https://github.com/davidjgoss">GitHub</a>.</p>
     </section>
 </main>
 {% include footer.html %}
