--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
 <a href="/" class="site-logo">David Goss</a>
 <main class="main" role="main">
     <section class="site-intro">
-        <p>I'm <strong>David</strong>, a software developer from the UK.</p>
+        <p>I'm <strong>David</strong>, a software engineer from the UK.</p>
 
         <p>Most recently, I wrote about {% for post in site.categories.blog limit:1 %}<a href="{{ post.url }}">{{ post.latest }}</a>{% endfor %}. There are <a href="/blog/">other articles</a> too.</p>
 
