--- a/_sass/blogging/_entry.scss
+++ b/_sass/blogging/_entry.scss
@@ -18,7 +18,7 @@
 
 .byline__tag {
     padding: 0 0.125em;
-    border: 1px solid $link-color;
+    border: 1px solid $light-theme-color;
     border-radius: 0.25em;
 }
 
