--- a/_sass/blogging/_footnotes.scss
+++ b/_sass/blogging/_footnotes.scss
@@ -16,7 +16,7 @@
     width: 1.25em;
     height: 1.25em;
     margin-left: 0.125em;
-    background-color: $link-color;
+    background-color: $light-theme-color;
     color: #fff;
     border-radius: 50%;
     text-align: center;
