--- a/_sass/global/_forms.scss
+++ b/_sass/global/_forms.scss
@@ -1,5 +1,5 @@
 .button {
-	background-color: $link-color;
+	background-color: $light-theme-color;
 	color: #fff;
 	text-decoration: none;
 	font-family: $base-font;
