--- a/_sass/global/_vars.scss
+++ b/_sass/global/_vars.scss
@@ -7,10 +7,10 @@ $quote-color: #666;
 $fade-color: #888;
 $shade-color: #eaeaea;
 
-$bright-theme-color: #46b5d1;
-$light-theme-color: #515585;
-$mid-theme-color: #32407b;
-$dark-theme-color: #151965;
+$bright-theme-color: rgb(0, 210, 225);
+$light-theme-color: rgb(0, 210, 225);
+$mid-theme-color: rgb(0, 210, 225);
+$dark-theme-color: rgb(0, 210, 225);
 
 $cv-color: rgb(29, 77, 148);
 $cv-color-shade: rgba(29, 77, 148, 0.25);
