jetbrains mono for code

--- a/_sass/global/_vars.scss
+++ b/_sass/global/_vars.scss
@@ -1,6 +1,6 @@
 $base-font: "Overpass", "Helvetica", sans-serif;
 $heading-font: $base-font;
-$mono-font: "Overpass Mono", "Consolas", "Courier New", monospace;
+$mono-font: "JetBrainsMono", "Consolas", "Courier New", monospace;
 
 $base-color: #333;
 $quote-color: #666;
