--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@
 # Just enough front matter for Jekyll to kick in...
 ---
 
+@import "fonts";
 @import "global/vars";
 @import "global/reset";
 @import "global/global";
