--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,8 @@
 
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Overpass:400,400i,600,600i" />
   <link rel="stylesheet" href="/css/style.css" />
-  <link rel="icon" href="icon.png" />
-  <link rel="apple-touch-icon" href="icon.png" />
+  <link rel="icon" href="icon.svg" />
+  <link rel="apple-touch-icon" href="icon.svg" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml" />
   
   <script>
