--- a/_sass/global/_vars.scss
+++ b/_sass/global/_vars.scss
@@ -1,16 +1,16 @@
 $base-font: "Overpass", "Helvetica", sans-serif;
 $heading-font: $base-font;
-$mono-font: "Overpass Mono", "Consolas", "Courier New", monospace;
+$mono-font: "JetBrainsMono", "Consolas", "Courier New", monospace;
 
 $base-color: #333;
 $quote-color: #666;
 $fade-color: #888;
 $shade-color: #eaeaea;
 
-$bright-theme-color: #46b5d1;
-$light-theme-color: #515585;
-$mid-theme-color: #32407b;
-$dark-theme-color: #151965;
+$bright-theme-color: rgb(0, 210, 225);
+$light-theme-color: $bright-theme-color;
+$mid-theme-color: $bright-theme-color;
+$dark-theme-color: $bright-theme-color;
 
 $cv-color: rgb(29, 77, 148);
 $cv-color-shade: rgba(29, 77, 148, 0.25);
