--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-{% include head.html %}
+{% include head %}
 <body>
 <main class="main" role="main">
     {{ content }}
