get css and templates nearly working as now

--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,7 +1,7 @@
-<header class="site-header" role="banner">
+<header class="site-header clearfix" role="banner">
     <a class="site-logo" href="/">David Goss</a>
     <nav role="navigation">
-        <ul class="site-nav">
+        <ul class="site-nav clearfix">
             <li><a href="/blog/">Articles</a></li>
             <li><a href="/about/">About</a></li>
         </ul>
