--- a/blog/index.njk
+++ b/blog/index.njk
@@ -1,10 +1,10 @@
 ---
 layout: default
 ---
+{% include 'header.njk' %}
 <header class="archive-header">
     <h1 class="page-heading">Articles</h1>
 </header>
-
 <div class="post-list">
     {% for post in collections.posts %}
     {% include 'post-listing.njk' %}
