--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 @import "fonts.css";
-@import "global/vars.css";
-@import "global/reset.css";
-@import "global/global.css";
+@import "vars.css";
+@import "reset.css";
+@import "global.css";
 
-@import "blogging/code.css";
-@import "blogging/entry.css";
-@import "blogging/footnotes.css";
-@import "blogging/archives.css";
+@import "code.css";
+@import "entry.css";
+@import "footnotes.css";
+@import "archives.css";
 
 @import "landmarks.css";
 
-@import "global/utils.css";
+@import "utils.css";
