--- a/_includes/post-listing.njk
+++ b/_includes/post-listing.njk
@@ -1,6 +1,6 @@
 <article class="h-entry entry entry--list entry--blog" itemscope itemtype="http://schema.org/BlogPosting">
     <h2 class="p-name entry__title" itemprop="headline">
-        <a href="{{ post.url }}">{{ post.title }}</a>
+        <a href="{{ post.url }}">{{ post.data.title }}</a>
     </h2>
     <p class="byline">
         <a class="u-url byline__permalink" href="{{ post.url }}" itemprop="url">∞</a>
