--- a/css/footnotes.css
+++ b/css/footnotes.css
@@ -9,14 +9,14 @@
 }
 
 .footnote {
-    @extend .reversefootnote;
+    text-decoration: none;
     display: inline-block;
     vertical-align: top;
     font-size: 0.666em;
     width: 1.25em;
     height: 1.25em;
     margin-left: 0.125em;
-    background-color: $light-theme-color;
+    background-color: var(--theme-color);
     color: #fff;
     border-radius: 50%;
     text-align: center;
