--- a/_includes/head.njk
+++ b/_includes/head.njk
@@ -2,7 +2,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <title>{{ title }}</title>
 
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Overpass:400,400i,600,600i" />
   <link rel="stylesheet" href="/css/style.css" />
