--- a/css/code.css
+++ b/css/code.css
@@ -1,5 +1,5 @@
-/* PrismJS 1.20.0
-https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+css+clike+javascript+java+json+less+markdown+jsx+scss+typescript+yaml */
+/* PrismJS 1.22.0
+https://prismjs.com/download.html#themes=prism-tomorrow */
 /**
  * prism.js tomorrow night eighties for JavaScript, CoffeeScript, CSS and HTML
  * Based on https://github.com/chriskempson/tomorrow-theme
@@ -21,7 +21,8 @@ pre, code, kbd {
 }
 
 code {
-	background-color: #ddd;
+	background-color: #2d2d2d;
+	color: #ccc;
 	padding: 0 0.25em;
 }
 
