fix up footer and add where missing

--- a/_includes/article.njk
+++ b/_includes/article.njk
@@ -16,3 +16,4 @@ layout: default
 
     <div class="e-content entry__content long-form" itemprop="articleBody">{{ content | safe }}</div>
 </article>
+{% include 'footer.njk' %}
