--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -8,3 +8,4 @@ layout: default
     </header>
     <div class="long-form" itemprop="articleBody">{{ content | safe }}</div>
 </article>
+{% include 'footer.njk' %}
