--- a/css/fonts.css
+++ b/css/fonts.css
@@ -2,5 +2,5 @@
   font-family: "JetBrainsMono";
   font-style: normal;
   font-weight: 400;
-  src: local("JetBrainsMono-Regular"), url("../fonts/JetBrainsMono-Regular.woff2") format("woff2");
+  src: local("JetBrainsMono-Regular"), url("fonts/JetBrainsMono-Regular.woff2") format("woff2");
 }
