normalise all templating as liquid

--- a/blog/index.liquid
+++ b/blog/index.liquid
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{% include 'header.njk' %}
+{% include header %}
 <header class="archive-header">
     <h1 class="page-heading">Articles</h1>
 </header>
@@ -19,4 +19,4 @@ layout: default
     </article>
     {% endfor %}
 </div>
-{% include 'footer.njk' %}
+{% include footer %}
