--- a/_includes/page.liquid
+++ b/_includes/page.liquid
@@ -1,11 +1,11 @@
 ---
 layout: default
 ---
-{% include 'header.njk' %}
+{% include header %}
 <article itemscope itemtype="http://schema.org/Article">
     <header>
         <h1 itemprop="headline">{{ title }}</h1>
     </header>
     <div class="long-form" itemprop="articleBody">{{ content | safe }}</div>
 </article>
-{% include 'footer.njk' %}
+{% include footer %}
