--- a/index.liquid
+++ b/index.liquid
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-{% include head.njk %}
+{% include head %}
 <body class="home-page">
 <a href="/" class="site-logo">David Goss</a>
 <main class="main" role="main">
@@ -10,6 +10,6 @@
         <p>There's a bit about me (and this site) <a href="/about/">here</a>. You can also find me on <a href="https://twitter.com/davidjgoss">Twitter</a> and <a href="https://github.com/davidjgoss">GitHub</a>.</p>
     </section>
 </main>
-{% include footer.njk %}
+{% include footer %}
 </body>
 </html>
