home page design

--- a/styles.njk
+++ b/styles.njk
@@ -10,4 +10,5 @@ permalink: css/styles.css
 {% include "css/footnotes.css" %}
 {% include "css/archives.css" %}
 {% include "css/landmarks.css" %}
+{% include "css/home.css" %}
 {% include "css/utils.css" %}
