dark background, cards layout

--- a/_includes/about.liquid
+++ b/_includes/about.liquid
@@ -1,22 +1,25 @@
----
-layout: default
----
-{% include header %}
+<!doctype html>
+<html lang="en">
+{% include head %}
+<body class="about-page">
 <article itemscope itemtype="http://schema.org/Article">
-    <section class="long-form" itemprop="articleBody">
-        <img class="about-photo" alt="Photo of David Goss" src="/static/me.jpg"/>
-        {{ content | safe }}
-    </section>
     <section class="contact">
-        <div class="contact__front">
+        <div class="contact__card contact__card--back"></div>
+        <div class="contact__card contact__card--back"></div>
+        <div class="contact__card contact__card--front">
+            <img class="contact__photo" alt="Photo of David Goss" src="/static/me.jpg"/>
             <h3 class="contact__name">David Goss</h3>
             <ul class="contact__methods">
                 <li><a href="mailto:david@davidgoss.co">Email <strong>david@davidgoss.co</strong></a></li>
                 <li><a href="https://twitter.com/intent/tweet?text=@davidjgoss">Tweet <strong>@davidjgoss</strong></a></li>
             </ul>
         </div>
-        <div class="contact__back"></div>
-        <div class="contact__back"></div>
+    </section>
+    <section class="long-form" itemprop="articleBody">
+        {{ content | safe }}
     </section>
 </article>
-{% include footer %}
+</body>
+</html>
+
+
