--- a/css/about.css
+++ b/css/about.css
@@ -1,18 +1,49 @@
-.about-photo {
-    float: left;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin: 0 1rem 1rem 0;
+.about-page {
+    background-color: #333;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100vh;
+    padding: 1.5rem;
 }
 
 .contact {
-    margin: 1.5rem 0;
+    position: relative;
+    width: 25rem;
+    margin: 0 auto 2rem auto;
 }
 
-.contact__front {
+.contact__card {
+    position: relative;
     width: 25rem;
     height: 12rem;
-    padding: 1rem;
-    border: 1px solid var(--shade-color);
+    padding: 1.5rem;
+    border-radius: 0.333rem;
+    transform-origin: bottom right;
+}
+
+.contact__card--front {
+    background-color: white;
+    color: #333;
+    transform: rotate(4deg) translate3d(0, 0, 0);
+}
+
+.contact__card--back {
+    background-color: var(--theme-color);
+    position: absolute;
+    transform: rotate(0deg) translate3d(0, 0, 0);
+}
+
+.contact__card--back:nth-of-type(2) {
+    transform: rotate(8deg) translate3d(0, 0, 0);
+}
+
+.contact__photo {
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
