simplify contact card

--- a/_includes/about.liquid
+++ b/_includes/about.liquid
@@ -8,11 +8,8 @@
         <div class="contact__card contact__card--back"></div>
         <div class="contact__card contact__card--front">
             <img class="contact__photo" alt="Photo of David Goss" src="/static/me.jpg"/>
-            <h3 class="contact__name">David Goss</h3>
-            <ul class="contact__methods">
-                <li><a href="mailto:david@davidgoss.co">Email <strong>david@davidgoss.co</strong></a></li>
-                <li><a href="https://twitter.com/intent/tweet?text=@davidjgoss">Tweet <strong>@davidjgoss</strong></a></li>
-            </ul>
+            <h3 class="contact__name"><a href="/">David Goss</a></h3>
+            <a href="mailto:david@davidgoss.co">david@davidgoss.co</a>
         </div>
     </section>
     <section class="long-form" itemprop="articleBody">
