--- a/css/about.css
+++ b/css/about.css
@@ -17,7 +17,7 @@
 .contact__card {
     position: relative;
     width: 25rem;
-    height: 12rem;
+    height: 10rem;
     padding: 1.5rem;
     border-radius: 0.333rem;
     transform-origin: bottom right;
@@ -46,4 +46,9 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
+}
+
+.contact__name a {
+    color: inherit;
+    text-decoration: none;
 }
