--- a/index.liquid
+++ b/index.liquid
@@ -6,7 +6,7 @@
     <section class="home-intro">
         <p>I'm a software developer based in the UK.</p>
         <p>Most recently, I wrote about {% for post in collections.posts limit:1 %}<a href="{{ post.url }}">{{ post.data.latest }}</a>{% endfor %}. There are <a href="/blog">other articles</a> too.</p>
-        <p>There's a bit about me (and this site) <a href="/about/">here</a>. You can also find me on <a href="https://twitter.com/davidjgoss">Twitter</a> and <a href="https://github.com/davidjgoss">GitHub</a>.</p>
+        <p>There's <a href="/about/">more about me</a> if you're interested.</p>
     </section>
 </body>
 </html>
