--- a/css/home.css
+++ b/css/home.css
@@ -21,8 +21,17 @@
 .home-intro {
     font-size: 1.5rem;
     line-height: 1.25em;
+    margin-bottom: 2rem;
 }
 
 .home-intro p + p {
     margin-top: 1.5rem;
+}
+
+.home-social a + a {
+    margin-left: 0.5rem;
+}
+
+.home-social img {
+    width: 1.5rem;
 }
