--- a/index.liquid
+++ b/index.liquid
@@ -5,8 +5,13 @@
     <h1 class="home-name">David Goss</h1>
     <section class="home-intro">
         <p>I'm a software developer based in the UK.</p>
-        <p>Most recently, I wrote about {% for post in collections.posts limit:1 %}<a href="{{ post.url }}">{{ post.data.latest }}</a>{% endfor %}. There are <a href="/blog">other articles</a> too.</p>
+        <p>Most recently, I wrote about {% for post in collections.posts limit:1 %}<a href="{{ post.url }}">{{ post.data.latest }}</a>{% endfor %}. There are <a href="/blog/">other articles</a> too.</p>
         <p>There's <a href="/about/">more about me</a> if you're interested.</p>
     </section>
+    <p class="home-social">
+        <a href="https://github.com/davidjgoss" title="GitHub"><img alt="" src="/static/github.svg"/></a>
+        <a href="https://www.linkedin.com/in/david-goss-2b986a181/" title="LinkedIn"><img alt="" src="/static/linkedin.svg"/></a>
+        <a href="https://twitter.com/davidjgoss" title="Twitter"><img alt="" src="/static/twitter.svg"/></a>
+    </p>
 </body>
 </html>
