finish about design

--- a/_includes/about.liquid
+++ b/_includes/about.liquid
@@ -14,8 +14,21 @@
             <a href="mailto:david@davidgoss.co" itemprop="email">david@davidgoss.co</a>
         </div>
     </section>
-    <section class="long-form" itemprop="articleBody">
+    <section class="long-form synopsis" itemprop="articleBody">
         {{ content | safe }}
+    </section>
+    <section>
+        <ol class="meta-flow">
+            <li>
+                <a href="https://daringfireball.net/projects/markdown/"><img alt="Markdown" src="/static/markdown.svg"/></a>
+            </li>
+            <li>
+                <a href="https://www.11ty.dev/"><img alt="Eleventy" src="/static/eleventy.svg"/></a>
+            </li>
+            <li>
+                <a href="https://www.netlify.com/"><img alt="Netlify" src="/static/netlify.svg"/></a>
+            </li>
+        </ol>
     </section>
 </main>
 </body>
