simplify, remove "about"

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -1,9 +1,4 @@
 <header class="site-header clearfix" role="banner">
     <a class="site-logo" href="/">David Goss</a>
-    <nav role="navigation">
-        <ul class="site-nav clearfix">
-            <li><a href="/blog/">Blog</a></li>
-            <li><a href="/about/">About</a></li>
-        </ul>
-    </nav>
+    <a class="site-nav" href="/blog/">Blog</a>
 </header>
