--- a/index.liquid
+++ b/index.liquid
@@ -4,9 +4,8 @@
 <body class="home-page">
     <h1 class="home-name">David Goss</h1>
     <section class="home-intro">
-        <p>I'm a software developer based in the UK.</p>
-        <p>Most recently, I wrote about {% for post in collections.posts limit:1 %}<a href="{{ post.url }}">{{ post.data.latest }}</a>{% endfor %}. There are <a href="/blog/">other articles</a> too.</p>
-        <p>There's <a href="/about/">more about me</a> if you're interested.</p>
+        <p>I'm a full-stack software developer based in the UK.</p>
+        <p>Most recently, I wrote about {% for post in collections.posts limit:1 %}<a href="{{ post.url }}">{{ post.data.latest }}</a>{% endfor %}. There are <a href="/blog/">other posts</a> too.</p>
     </section>
     <p class="home-social">
         <a href="https://github.com/davidjgoss" title="GitHub"><img alt="" src="/static/github.svg"/></a>
