--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -2,14 +2,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title>{{ title }}</title>
+  <title>{{ title | title }}</title>
 
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Overpass:400,400i,600,600i" />
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="icon" href="/icon.svg" />
   <link rel="apple-touch-icon" href="/icon.svg" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml" />
-  
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
