--- a/css/footnotes.css
+++ b/css/footnotes.css
@@ -1,24 +1,8 @@
 .footnotes {
     font-size: 0.8rem;
-    padding-top: 1.5rem;
-    border-top: 1px solid #ddd;
 }
 
-.reversefootnote {
+.footnote-backref,
+.footnote-ref a {
     text-decoration: none;
-}
-
-.footnote {
-    text-decoration: none;
-    display: inline-block;
-    vertical-align: top;
-    font-size: 0.666em;
-    width: 1.25em;
-    height: 1.25em;
-    margin-left: 0.125em;
-    background-color: var(--theme-color);
-    color: #fff;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 1.5em;
 }
