--- a/blog/index.liquid
+++ b/blog/index.liquid
@@ -1,10 +1,8 @@
 ---
 layout: default
+title: Blog
 ---
 {% include header %}
-<header class="archive-header">
-    <h1 class="page-heading">Articles</h1>
-</header>
 <div class="post-list">
     {% for post in collections.posts %}
     <article class="h-entry entry entry--list entry--blog" itemscope itemtype="http://schema.org/BlogPosting">
