--- a/css/landmarks.css
+++ b/css/landmarks.css
@@ -1,5 +1,5 @@
 .site-header {
-    margin-bottom: 2.5em;
+    margin-bottom: 2.5rem;
 }
 
 .site-logo {
@@ -11,57 +11,17 @@
     font-weight: bold;
     font-size: 1.5em;
     line-height: 1em;
-    padding: 0.5em;
-    padding-top: 2.5rem;
-    border: 1px solid var(--theme-color);
-}
-
-@media (min-height: 650px) {
-    .home-page .site-logo {
-        padding-top: 5rem;
-    }
+    padding: 0.75em;
+    padding-top: 1.5em;
 }
 
 .site-nav {
-    clear: both;
-    list-style: none;
-    text-transform: uppercase;
-    font-weight: bold;
-    padding-top: 0.5rem;
-}
-
-@media all and (min-width: 600px) {
-    .site-nav {
-        clear: none;
-        float: left;
-        padding: 2.5rem 0 0 0.75rem;
-    }
-}
-
-.site-nav li {
-    display: inline-block;
-}
-
-.site-nav li::after {
-    content: "\2022";
-    color: var(--theme-color);
-    padding-left: 0.5em;
-    padding-right: 0.25em;
-    opacity: 0.8;
-}
-
-.site-nav li:last-child::after {
-    content: "";
-}
-
-.site-nav a {
-    color: var(--quote-color);
+    float: left;
+    margin: 1rem;
+    margin-top: 2.25rem;
+    color: #666;
     text-decoration: none;
-}
-
-.site-nav a:hover,
-.site-nav a:focus {
-    color: var(--base-color);
+    text-transform: uppercase;
 }
 
 .site-info {
@@ -70,27 +30,4 @@
     font-size: 0.75em;
     line-height: 1.25em;
     margin-top: 2.5rem;
-}
-
-.home-page .site-info {
-    text-align: left;
-}
-
-.site-intro {
-    clear: left;
-    padding-top: 2rem;
-}
-
-.site-intro p:first-child {
-    font-size: 3rem;
-    line-height: 1em;
-}
-
-.site-intro p:nth-child(2) {
-    font-size: 1.5rem;
-    line-height: 1.25em;
-}
-
-.site-intro p + p {
-    margin-top: 1.5rem;
 }
