--- a/styles.njk
+++ b/styles.njk
@@ -8,6 +8,6 @@ permalink: css/styles.css
 {% include "css/code.css" %}
 {% include "css/entry.css" %}
 {% include "css/footnotes.css" %}
-{% include "css/archives.css" %}
 {% include "css/landmarks.css" %}
+{% include "css/home.css" %}
 {% include "css/utils.css" %}
