--- a/index.liquid
+++ b/index.liquid
@@ -8,9 +8,9 @@
         <p>Most recently, I wrote about {% for post in collections.posts limit:1 %}<a href="{{ post.url }}">{{ post.data.latest }}</a>{% endfor %}. There are <a href="/blog/">other posts</a> too.</p>
     </section>
     <p class="home-social">
-        <a href="https://github.com/davidjgoss" title="GitHub"><img alt="" src="/static/github.svg"/></a>
-        <a href="https://www.linkedin.com/in/david-goss-2b986a181/" title="LinkedIn"><img alt="" src="/static/linkedin.svg"/></a>
-        <a href="https://twitter.com/davidjgoss" title="Twitter"><img alt="" src="/static/twitter.svg"/></a>
+        <a href="https://github.com/davidjgoss" title="GitHub"><img alt="" src="/static/github.svg" width="27" height="27"/></a>
+        <a href="https://www.linkedin.com/in/david-goss-2b986a181/" title="LinkedIn"><img alt="" src="/static/linkedin.svg" width="27" height="27"/></a>
+        <a href="https://twitter.com/davidjgoss" title="Twitter"><img alt="" src="/static/twitter.svg" width="27" height="27"/></a>
     </p>
 </body>
 </html>
