preconnect to google analytics

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -4,6 +4,7 @@
 
   <title>{{ title | title }}</title>
 
+  <link rel="preconnect" href="//www.google-analytics.com"/>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Overpass:400,400i,600,600i" />
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="icon" href="/icon.svg" />
