use overpass mono for code, use font-display:swap for perf

--- a/css/code.css
+++ b/css/code.css
@@ -8,7 +8,7 @@ https://prismjs.com/download.html#themes=prism-tomorrow */
 
 pre, code, kbd {
 	font-size: 1em;
-	font-family: 'JetBrainsMono', 'Consolas', 'Courier New', monospace;
+	font-family: 'Overpass Mono', 'Consolas', 'Courier New', monospace;
 	word-spacing: normal;
 	word-break: normal;
 	-moz-tab-size: 4;
