--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     min-height: 100vh;
-    padding: 1.5rem;
+    padding: 0 1.5rem;
 }
 
 .home-page a {
