perf improvements and tweaks (#17)
* simplify css, use reset from npm

* explicit image dimensions

* preconnect to google analytics

* use overpass mono for code, use font-display:swap for perf

* remove unnecessary padding

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -4,7 +4,8 @@
 
   <title>{{ title | title }}</title>
 
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Overpass:400,400i,600,600i" />
+  <link rel="preconnect" href="//www.google-analytics.com"/>
+  <link rel="stylesheet" href="//fonts.googleapis.com/css2?family=Overpass+Mono&family=Overpass:ital,wght@0,400;0,600;1,400;1,600&display=swap" />
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="icon" href="/icon.svg" />
   <link rel="apple-touch-icon" href="/icon.svg" />
