--- a/styles.njk
+++ b/styles.njk
@@ -1,13 +1,11 @@
 ---
 permalink: css/styles.css
 ---
-{% include "css/fonts.css" %}
+{% include "node_modules/modern-reset/reset.css" %}
 {% include "css/vars.css" %}
-{% include "css/reset.css" %}
 {% include "css/global.css" %}
 {% include "css/code.css" %}
 {% include "css/entry.css" %}
 {% include "css/footnotes.css" %}
-{% include "css/landmarks.css" %}
+{% include "css/header.css" %}
 {% include "css/home.css" %}
-{% include "css/utils.css" %}
