--- a/index.liquid
+++ b/index.liquid
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-{% include head %}
+{% include "head" %}
 <body class="home-page">
     <h1 class="home-name">David Goss</h1>
     <section class="home-intro">
