--- a/_includes/default.liquid
+++ b/_includes/default.liquid
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-{% include head %}
+{% include "head" %}
 <body>
 <main class="main" role="main">
     {{ content | safe }}
