--- a/blog/index.liquid
+++ b/blog/index.liquid
@@ -2,7 +2,7 @@
 layout: default
 title: Blog
 ---
-{% include header %}
+{% include "header" %}
 <div class="post-list">
     {% for post in collections.posts %}
     <article class="h-entry entry entry--list entry--blog" itemscope itemtype="http://schema.org/BlogPosting">
@@ -17,4 +17,4 @@ title: Blog
     </article>
     {% endfor %}
 </div>
-{% include footer %}
+{% include "footer" %}
